# energy-price-forecast

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_data_exploration.ipynb
scripts/: backtest.py  insert_cells_43_45.py  smoke_check_commodities.py  smoke_check_loader.py
src/energy_price_forecast/: __init__.py  config.py  market_time.py
src/energy_price_forecast/data/: _entsoe_cache.py  _entsoe_retry.py  commodities_client.py  entsoe_client.py  loaders.py  normalize.py
src/energy_price_forecast/evaluation/: metrics.py  walkforward.py
src/energy_price_forecast/features/: availability.py  build.py  calendar.py  config.py  fundamentals.py
src/energy_price_forecast/models/: baseline.py
tests/: test_availability.py  test_commodities_client.py  test_entsoe_client.py  test_features.py  test_loaders.py  test_metrics.py  test_normalize.py  test_smoke.py  test_walkforward.py
